--- a/arch/arm64/boot/dts/amlogic/mesong12a.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesong12a.dtsi
@@ -1733,6 +1733,13 @@
 		interrupts = <0 52 1>;
 		interrupt-names = "ddr_bandwidth";
 	};
+
+	defendkey: defendkey {
+	compatible = "amlogic, defendkey";
+	reg = <0x0 0xff630218 0x0 0x4>; /*RNG_USR_DATA*/
+	mem_size = <0x0 0x1000>;
+	status = "disabled";
+	};
 };/* end of / */
 
 &pinctrl_aobus {
