--- a/arch/arm64/boot/dts/freescale/imx8qxp-mek-car2.dts
+++ b/arch/arm64/boot/dts/freescale/imx8qxp-mek-car2.dts
@@ -14,6 +14,88 @@
 
 #include "imx8qxp-mek-rpmsg.dts"
 
+&i2c0 {
+	clock-frequency = <1000000>;
+};
+
+&i2c2 {
+	clock-frequency = <1000000>;
+};
+
+&i2c3 {
+	clock-frequency = <1000000>;
+};
+
+&i2c_mipi_csi0 {
+	clock-frequency = <1000000>;
+};
+
+&i2c0_mipi_lvds0 {
+	clock-frequency = <500000>;
+	adv7535@3d {
+		status = "disabled";
+	};
+};
+
+&i2c0_mipi_lvds1 {
+	clock-frequency = <500000>;
+	adv7535@3d {
+		status = "disabled";
+	};
+};
+
+&pwm_mipi_lvds0 {
+	status = "disabled";
+};
+
+&lvds_backlight0 {
+	status = "disabled";
+};
+
+&pwm_mipi_lvds1 {
+	status = "disabled";
+};
+
+&lvds_backlight1 {
+	status = "disabled";
+};
+
+&mipi0_dphy {
+	status = "disabled";
+};
+
+&mipi0_dsi_host {
+	status = "disabled";
+};
+
+&mipi1_dphy {
+	status = "disabled";
+};
+
+&mipi1_dsi_host {
+	status = "disabled";
+};
+
+&usdhc2 {
+	status = "disabled";
+};
+
+&amix {
+	status = "disabled";
+};
+
+&asrc0 {
+	status = "disabled";
+};
+
+&jpegdec {
+	status = "disabled";
+};
+
+&jpegenc {
+	status = "disabled";
+};
+
 &wm8960 {
 	quick-probe;
 };
