--- a/arch/arm64/boot/dts/freescale/imx8mp-nitrogen8mp.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-nitrogen8mp.dts
@@ -1350,10 +1350,11 @@
 	status = "okay";
 
 	wm8960: codec@1a {
+		clock-names = "mclk";
+		clocks = <&audiomix_clk IMX8MP_CLK_AUDIOMIX_SAI3_MCLK1>;
 		compatible = "wlf,wm8960";
 		reg = <0x1a>;
-		clocks = <&audiomix_clk IMX8MP_CLK_AUDIOMIX_SAI3_MCLK1>;
-		clock-names = "mclk";
+		wlf,gpio-cfg = <1 3>;
 		/* JD2: hp detect high for headphone*/
 		wlf,hp-cfg = <2 0 3>;
 		wlf,shared-lrclk;
