--- a/arch/arm64/configs/imx_v8_android_defconfig
+++ b/arch/arm64/configs/imx_v8_android_defconfig
@@ -671,6 +671,7 @@ CONFIG_SPI_SLAVE=y
 CONFIG_SPI_SLAVE_TIME=y
 CONFIG_SPI_SLAVE_SYSTEM_CONTROL=y
 # CONFIG_SPMI_MSM_PMIC_ARB is not set
+CONFIG_PPS_CLIENT_GPIO=y
 CONFIG_PINCTRL_MAX77620=y
 CONFIG_PINCTRL_IMX8MM=y
 CONFIG_PINCTRL_IMX8MN=y
