--- a/arch/arm64/boot/dts/freescale/imx8mp-nitrogen8mp-enc.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-nitrogen8mp-enc.dts
@@ -166,6 +166,10 @@
 	};
 };
 
+&pcie_phy {
+	ext_osc = <0>;
+};
+
 &pwm4 {
 	assigned-clocks = <&clk IMX8MP_CLK_PWM4>;
 	assigned-clock-parents = <&clk IMX8MP_SYS_PLL1_40M>;
