--- a/arch/arm64/boot/dts/freescale/imx8mp-nitrogen_smarc.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-nitrogen_smarc.dts
@@ -9,8 +9,8 @@
 #include "imx8mp-nitrogen_smarc-som.dtsi"
 #include "nitrogen_smarc-carrier.dtsi"
 / {
-	model = "Boundary i.MX8MPlus nitrogen8mp smarc board";
-	compatible = "boundary,imx8mp-nitrogen-smarc", "fsl,imx8mp";
+	model = "Boundary Devices Nitrogen8MP SMARC board";
+	compatible = "boundary,imx8mp-nitrogen_smarc", "fsl,imx8mp";
 
 	aliases {
 		rtc1 = &snvs_rtc;
