--- a/arch/arm64/configs/boundary_android_defconfig
+++ b/arch/arm64/configs/boundary_android_defconfig
@@ -539,13 +539,13 @@ CONFIG_SPI_PL022=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
 CONFIG_PINCTRL=y
+CONFIG_PINCTRL_MCP23S08=y
 CONFIG_PINCTRL_MAX77620=y
 CONFIG_PINCTRL_IMX8MM=y
 CONFIG_PINCTRL_IMX8MN=y
 CONFIG_PINCTRL_IMX8MP=y
 CONFIG_PINCTRL_IMX8MQ=y
 CONFIG_PINCTRL_IMX8ULP=y
-CONFIG_GPIOLIB=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_DWAPB=y
 CONFIG_GPIO_IMX_RPMSG=y
